centered text, changed color values

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             max-width:650px;
             line-height:1.6;
             font-size:20px;
-            color:rgb(40, 40, 40);
+            color:rgb(60, 60, 60);
+            background-color:#FAF9F6;
             padding:0
             10px
             }
@@ -25,5 +26,5 @@
 
 <body>
     <center><h1>Name TBD 📄</h1></center>
-    <h2>Seamlessly create beautiful, responsive websites with just a .txt file.</h2>
+    <center><h2>Seamlessly create beautiful, responsive websites with just a .txt file.</h2></center>
 </body>
