--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
 
 <body>
     <center><h1>Name TBD 📄</h1></center>
-    <center><h2>Seamlessly create beautiful, responsive websites with just a .txt file.</h2></center>
+    <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h2></center>
+        <center><h3>Get started now ⬇️</h2></center>
+    <p></p>
 </body>
