Messing around with adding a footer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             h1,h2,h3{
                 line-height:1.2
             }
+
         </style>
         <style type="text/css"></style>
     </head>
@@ -30,3 +31,7 @@
     <center><h3>Get started now ⬇️</h2></center>
     
 </body>
+
+<footer>
+    <p>Snack Overflow</p>
+</footer>
