--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
     <center><h1>Name TBD 📄</h1></center>
     <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h2></center>
     <center><h3>Get started now ⬇️</h2></center>
-    
+    <center>
+        <form action="/action_page.php">
+            <input type="file" id="myFile" name="filename">
+            <input type="submit">
+        </form>
+    </center>
 </body>
