Changed footer to be at the bottom and smaller

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             h1,h2,h3{
                 line-height:1.5
             }
+            footer{
+                font-size:12px;
+                padding: 2px;
+                text-align: center;
+                bottom: 0;
+                position: fixed;
+                width: 100%;
+            }
 
         </style>
         <style type="text/css"></style>
@@ -34,7 +42,6 @@
 
 <body>
     <center><h1>Name TBD 📄</h1></center>
-<<<<<<< HEAD
     <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h3></center>
     <center><h3>Get started now ⬇️</h3></center>
     <center>
@@ -48,13 +55,3 @@
 <footer>
     <center><p>Made with ❤️ by Snack Overflow @HackUTD</p></center>
 </footer>
-=======
-    <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h2></center>
-    <center><h3>Get started now ⬇️</h2></center>
-    
-</body>
-
-<footer>
-    <p>Snack Overflow</p>
-</footer>
->>>>>>> e48eb52bb94860dbcbfc885dc3030b48749d68d2
