--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>HackUTD</title>
+        <link rel="stylesheet" href="styles.css" />
         <style type="text/css">body{
-            /* Testing addition of new font 
+            /* Old font 
             font-family: '-apple-system', 
                 BlinkMacSystemFont, sans-serif; */
-            
+
+            /* New font family */
             font-family: ‘SF Pro Display’,
                 sans-serif;
-                
             margin:40px auto;
             max-width:650px;
             line-height:1;
@@ -21,9 +22,7 @@
             padding:0
             10px
             }
-            h1,h2,h3{
-                line-height:1.5
-            }
+            h1,h2,h3{ line-height:1.5 }
             footer{
                 font-size:12px;
                 padding: 2px;
@@ -42,6 +41,18 @@
     <center><h1>Name TBD 📄</h1></center>
     <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h3></center>
     <center><h3>Get started now ⬇️</h3></center>
+    <center>
+        <div class="container">
+            <h4>Upload your file</h4>
+            <div class = "drag-area">
+                <div class="icon">
+                    <img src="square.and.arrow.dark@2x.png"></i>
+                </div>
+                <span class="header">Drag & Drop</span>
+                <span class="header"> or <span class="button">browse</span>
+            </div>
+        </div>
+    </center>
     <center>
         <form action="/action_page.php">
             <input type="file" id="myFile" name="filename">
