Added blank webpage html file for downloading

--- a/created.html
+++ b/created.html
@@ -15,7 +15,7 @@
     <center><h3>Download Below ⬇️</h3></center>
     
     <center>
-        <a href="put the download file here" download>Download</a>
+        <a href="webpage.html" download>Download</a>
     </center>
 </body>
 
