--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>HackUTD</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <link rel="stylesheet" href="styles.css">
     </head>
 </html>
@@ -14,21 +21,17 @@
     <center><h3>Get started now ⬇️</h3></center>
     <center>
         <div class="container">
-            <h4>Upload your file</h4>
+            <h3>Upload your file</h3>
             <div class = "drag-area">
                 <div class="icon">
                     <img src="square.and.arrow.dark@2x.png"></i>
                 </div>
-                <span class="header">Drag & Drop</span>
-                <span class="header"> or <span class="button">Browse</span>
+                <span class="header">Drag & drop</span>
+                <span class="header"> or <span class="button">browse</span>
+                <input type="file" hidden/>
             </div>
-        </div>
-    </center>
-    <center>
-        <form action="/action_page.php">
-            <input type="file" id="myFile" name="filename" style="width:87.5px">
-            <input type="submit">
-        </form>
+        </div> 
+        <script src="script.js"></script>
     </center>
 </body>
 
