Adding about us link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </head>
 
 <body>
+
     <center><h1>Name TBD 📄</h1></center>
     <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h3></center>
     <br><br>
@@ -30,6 +31,8 @@
         </div>
     </div> 
     <script src="script.js"></script>
+    <br>
+    <center><a href="aboutus">About Us</a></center>
     <br><br>
 </body>
 
