--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <center><h1>Name TBD 📄</h1></center>
-    <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h3></center>
+    <center><h3>Seamlessly create simple, responsive webpages with just a .txt file.</h3></center>
     <br><br>
     <div class="container">
         <h3 class="smaller">Upload your file</h3>
@@ -34,6 +34,6 @@
 </body>
 
 <footer>
-    <center><p>Made with ❤️ by Snack Overflow @ HackUTD IX</p></center>
+    <center><p>Made with ❤️ <a style="text-decoration:none" href="url">@HackUTD IX</a></p></center>
 </footer>
 </html>
