--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 </body>
 
 <footer>
-    <center><p>Made with ❤️ <a style="text-decoration:none" href="url">@HackUTD IX</a></p></center>
+    <center><p>Made with ❤️ <a style="text-decoration:none" href="https://ix.hackutd.co">@HackUTD IX</a></p></center>
 </footer>
 </html>
