no more about us

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <center><h1>Name TBD 📄</h1></center>
     <center><h3>Seamlessly create simple, responsive websites with just a .txt file.</h3></center>
-    <br><br>
+    <br>
     <div class="container">
         <h3 class="smaller">Upload your file</h3>
         <div class = "drag-area">
@@ -30,9 +30,8 @@
             <input type="file" hidden/>
         </div>
     </div> 
+    <div id="content"></div>
     <script src="script.js"></script>
-    <br>
-    <center><a href="aboutus">About Us</a></center>
     <br><br>
 </body>
 
