Added placeholder title

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
 
-    <center><h1>Name TBD 📄</h1></center>
+    <center><h1>webtext.io 🌎</h1></center>
     <center><h3>Seamlessly create simple, responsive webpages with just a .txt file.</h3></center>
     <br><br>
     <div class="container">
-        <h3 class="smaller">Upload your file</h3>
+        <h3 class="smaller">Upload your file 📄</h3>
         <div class = "drag-area">
             <div class="icon">
                 <img src="square.and.arrow.dark@2x.png"></i>
