--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <center><h1>webtext.io 🌎</h1></center>
-    <center><h3>Seamlessly create simple, responsive webpages with just a .txt file.</h3></center>
+    <center><h3>Seamlessly create simple, responsive webpages with a single .txt file.</h3></center>
     <br><br>
     <div class="container">
         <h3 class="smaller">Upload your file 📄</h3>
