--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <center><h3>Seamlessly create simple, responsive webpages with a single .txt file.</h3></center>
     <br><br>
     <div class="container">
-        <h3 class="smaller">Upload your file 📄</h3>
+        <h3 class="smaller">Upload your file</h3>
         <div class = "drag-area">
             <div class="icon">
                 <img src="square.and.arrow.dark@2x.png"></i>
