--- a/created.html
+++ b/created.html
@@ -10,16 +10,16 @@
 </html>
 
 <body>
-    <center><h1>Name TBD 📄</h1></center>
+    <center><h1>webtext.io 🌎</h1></center>
     <center><h3>Your website has been generated!</h3></center>
     <center><h3>Download Below ⬇️</h3></center>
     <br><br><br><br>
     <center>
         <a href="webpage.html" download>Download</a>
     </center>
-    <br><br><br>
+    <br><br><br><br><br><br>
 </body>
 
 <footer>
-    <center><p>Made with ❤️ by Snack Overflow @ HackUTD IX</p></center>
+    <center><p>Made with ❤️ <a style="text-decoration:none" href="https://ix.hackutd.co">@HackUTD IX</a></p></center>
 </footer>
