--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <center><h1>webtext.io 🌎</h1></center>
     <center><h3>Seamlessly create simple, responsive webpages with a single .txt file.</h3></center>
+    <br>
+    <p><a href="about.html">About</a> | <a href="howto.html">How to</a></p>
     <br><br>
     <div class="container">
         <h3 class="smaller">Upload your file</h3>
