changing css for links

--- a/about.html
+++ b/about.html
@@ -4,14 +4,21 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="Description" content="Learn what webtext.io is.">
-        <link href="./styles.min.css" type="text/css" rel="stylesheet">
-        <title>About webtext.io</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link rel="stylesheet" href="styles.min.css">
+        <title >About webtext.io</title>
         <style type="text/css"></style>
     </head>
     <body>
         <h1>About webtext.io</h1>
         <p>webtext.io lets anyone build simple, responsive, and lightweight web pages for free. Much of the world does not have access to high speed internet. Despite this, many websites are made up of hundreds or thousands of components, rendering them bulky and unusable to millions of people. Those with limited access to high speed internet are also less likely to publish their thoughts and experiences with the world. webtext.io aims to remove as many barriers to free internet access as possible.</p>
-
+        <br><br>
         <p class="footer"><a style = "text-decoration: none;" href="index.html">webtext.io home</a></p>
     </body>
 </html>
