--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@
         <h1>About webtext.io</h1>
         <p>webtext.io lets anyone build simple, responsive, and lightweight web pages for free. Much of the world does not have access to high speed internet. Despite this, many websites are made up of hundreds or thousands of components, rendering them bulky and unusable to millions of people. Those with limited access to high speed internet are also less likely to publish their thoughts and experiences with the world. webtext.io aims to remove as many barriers to free internet access as possible.</p>
 
-        <p class="footer"><a style = "text-decoration: none;" href="index.html">webtext.io home</a></p>
+        <p class="footer"><a style = "text-decoration: none; color: #1683ff; font-weight:600 ;" href="index.html">webtext.io home</a></p>
     </body>
 </html>
