Changed font weight on nav

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <center><h1>webtext.io 🌎</h1></center>
     <center><h3>Seamlessly create simple, responsive webpages with a single .txt file.</h3></center>
     <br>
-    <p><a href="about.html" style="color: #1683ff;">About</a> | <a href="howto.html" style="color: #1683ff;">How to</a></p>
+    <p><a href="about.html" style="color: #1683ff; font-weight: 400;">About</a> | <a href="howto.html" style="color: #1683ff; font-weight: 400;">How to</a></p>
     <br><br>
     <div class="container">
         <h3 class="smaller">Upload your file</h3>
