Made instructions more clear

--- a/howto.html
+++ b/howto.html
@@ -18,7 +18,7 @@
     <body>
         <h1>Using webtext.io to make your website</h1>
         <p>IMPORTANT: Be wary of spaces in the syntax to ensure it is formatted correctly!</p>
-        <p>Here is the basic syntax on how to stylize your page:</p>
+        <p>Create a .txt file on your system and write your desired text with our syntax to generate a formated website.<br>Here is the basic syntax needed:</p>
         <h2>Headers</h2>
         <ul>
             <li>Use "# " in front of text for Header 1</li>
