Updated file-handling logic in script.js, updated howto.html, updated index.html

--- a/howto.html
+++ b/howto.html
@@ -16,9 +16,9 @@
         <style type="text/css"></style>
     </head>
     <body>
-        <h1>Using webtext.io to make your website</h1>
-        <p>IMPORTANT: Be wary of spaces in the syntax to ensure it is formatted correctly!</p>
-        <p>Create a .txt file on your system and write your desired text with our syntax to generate a formated website.<br>Here is the basic syntax needed:</p>
+        <h1>Using webtext.io to make a webpage</h1>
+        <p>IMPORTANT: Be wary of spaces in the syntax to ensure your webpage is formatted correctly!</p>
+        <p>Create a .txt file on your system and write your desired text using <a href = "https://en.wikipedia.org/wiki/Markdown">Markdown </a>standard notation to generate a formatted webpage.<br>Here's a rundown of the basic syntax:</p>
         <h2>Headers</h2>
         <ul>
             <li>Use "# " in front of text for Header 1</li>
