Changed name to webtext.tech

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="Description" content="Learn what webtext.io is.">
+        <meta name="Description" content="Learn about webtext.tech.">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -12,13 +12,13 @@
             referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="styles.min.css">
-        <title >About webtext.io</title>
+        <title >About webtext.tech</title>
         <style type="text/css"></style>
     </head>
     <body>
-        <h1>About webtext.io</h1>
-        <p>webtext.io lets anyone build simple, responsive, and lightweight web pages for free. Much of the world does not have access to high speed internet. Despite this, many websites are made up of hundreds or thousands of components, rendering them bulky and unusable to millions of people. Those with limited access to high speed internet are also less likely to publish their thoughts and experiences with the world. webtext.io aims to remove as many barriers to free internet access as possible.</p>
+        <h1>About webtext.tech</h1>
+        <p>webtext.tech lets anyone build simple, responsive, and lightweight web pages for free. Much of the world does not have access to high speed internet. Despite this, many websites are made up of hundreds or thousands of components, rendering them bulky and unusable to millions of people. Those with limited access to high speed internet are also less likely to publish their thoughts and experiences with the world. webtext.tech aims to remove as many barriers to free internet access as possible.</p>
 
-        <p class="footer"><a style = "text-decoration: none; color: #1683ff; font-weight:600 ;" href="index.html">webtext.io home</a></p>
+        <p class="footer"><a style = "text-decoration: none; color: #1683ff; font-weight:600 ;" href="index.html">webtext.tech home</a></p>
     </body>
 </html>
