--- a/howto.html
+++ b/howto.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="Description" content="Learn what webtext.io is.">
+        <meta name="Description" content="Learn about webtext.tech.">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -16,7 +16,7 @@
         <style type="text/css"></style>
     </head>
     <body>
-        <h1>Using webtext.io to make a webpage</h1>
+        <h1>Using webtext.tech to make a webpage</h1>
         <p>IMPORTANT: Be wary of spaces in the syntax to ensure your webpage is formatted correctly!</p>
         <p>Create a .txt file on your system and write your desired text using <a href = "https://en.wikipedia.org/wiki/Markdown">Markdown </a>standard notation to generate a formatted webpage.<br>Here's a rundown of the basic syntax:</p>
         <h2>Headers</h2>
@@ -92,6 +92,6 @@
             </ul>
         </ul>
 
-        <p class="footer"><a style = "text-decoration: none; color: #1683ff; font-weight:600 ;" href="index.html">webtext.io home</a></p>
+        <p class="footer"><a style = "text-decoration: none; color: #1683ff; font-weight:600 ;" href="index.html">webtext.tech home</a></p>
     </body>
 </html>
