--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <center><h1>webtext.io 🌎</h1></center>
+    <center><h1>webtext.tech 🌎</h1></center>
     <center><h3>Seamlessly create simple, responsive webpages with a single .txt file.</h3></center>
     <br>
     <p><a href="about.html" style="color: #1683ff; font-weight: 400;">About</a> | <a href="howto.html" style="color: #1683ff; font-weight: 400;">How to</a></p>
