-wrong src script for created oops -also fixed heading capture group , all other shit needs fixing tho

--- a/created.html
+++ b/created.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Test-->
         <title>HackUTD</title>
-        <script src="index.js"></script>
+        <script src="script.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
 </html>
@@ -24,5 +24,5 @@
 </body>
 
 <footer>
-    <center><p>Made with ❤️ <a style="text-decoration:none" href="https://ix.hackutd.co" target="_blank" rel="noopener noreferrer">@HackUTD IX</a></p></center>
+    <center><p>Made with ❤️ by Snack Overflow @ HackUTD IX</p></center>
 </footer>
