added input file to index.html + js code

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <span class="header">Drag & drop</span>
             <span class="header"> or <span class="button">browse</span>
-            <input type="file" hidden/>
+            <input type="file" id="input" hidden/>
         </div>
     </div> 
     <div id="content"></div>
