changed verbage to webpage

--- a/created.html
+++ b/created.html
@@ -12,7 +12,7 @@
 
 <body>
     <center><h1>webtext.tech 🌎</h1></center>
-    <center><h3>Your website has been generated!</h3></center>
+    <center><h3>Your webpage has been generated!</h3></center>
     <center><h3>Download Below ⬇️</h3></center>
     <br><br>
     <br><br>
