--- a/created.html
+++ b/created.html
@@ -12,14 +12,12 @@
 
 <body>
     <center><h1>webtext.tech 🌎</h1></center>
-    <center><h3>Your webpage has been generated!</h3></center>
-    <center><h3>Download Below ⬇️</h3></center>
-    <br><br>
+    <center><h3>Your webpage has been generated!👇</h3></center>
     <br><br>
     <center>
         <a href="webpage.html" download>Download</a>
     </center>
-    <br><br><br>
+    <br><br>
 </body>
 
 <footer>
