updated created.html footer

--- a/created.html
+++ b/created.html
@@ -21,5 +21,5 @@
 </body>
 
 <footer>
-    <center><p>Made with ❤️ by Snack Overflow @ HackUTD IX</p></center>
+    <center><p>Made with ❤️ <a style="text-decoration:none" href="https://ix.hackutd.co" target="_blank" rel="noopener noreferrer">@HackUTD IX</a></p></center>
 </footer>
