--- a/created.html
+++ b/created.html
@@ -15,11 +15,11 @@
     <center><h3>Your webpage has been generated!👇</h3></center>
     <br><br>
     <center>
-        <a href="webpage.html" download>Download</a>
+        <a style=color:#1683ff; href="webpage.html" download>Download</a>
     </center>
     <br><br>
 </body>
 
 <footer>
-    <center><p>Made with ❤️ by Snack Overflow @ HackUTD IX</p></center>
+    <center><p>Made with ❤️ <a style="text-decoration:none" href="https://ix.hackutd.co" target="_blank" rel="noopener noreferrer">@HackUTD IX</a></p></center>
 </footer>
