added submit button to go to created.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <span class="header">Drag & drop</span>
             <span class="header"> or <span class="button">browse</span>
             <input type="file" id="input" hidden/>
+            <br>
+            <center>
+                <a style=color:#1683ff; href="created.html">Submit</a>
+            </center>
         </div>
     </div> 
     <div id="content"></div>
