--- a/created.html
+++ b/created.html
@@ -15,7 +15,7 @@
     <center><h3>Your webpage has been generated!👇</h3></center>
     <br><br>
     <center>
-        <a style=color:#1683ff; href="demo.html" download>Download</a>
+        <a style=color:#1683ff; href="./demo/demo.html" download>Download</a>
     </center>
     <br><a style = "text-decoration: none; color: #1683ff; font-weight:400 ;" href="index.html">webtext.tech home</a><br>
 </body>
